--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,13 @@
 .idea/vcs.xml
 
 .idea/workspace.xml
+
+.idea/combinatorics-ator.iml
+
+.idea/inspectionProfiles/profiles_settings.xml
+
+.idea/inspectionProfiles/Project_Default.xml
+
+.idea/misc.xml
+
+.idea/modules.xml
